# standard-trellis-template

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_README.md  PYPI_SETUP_GUIDE.md  PYPI_TRUSTED_PUBLISHING_SETUP.md  README.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md  lint.config.js  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: npm-release.yml  python-release.yml  release.yml
.trellis-template/spec/: architecture.md  framework.md  language.md  lint.md  security.md
trellis_standard/: __init__.py  cli.py
trellis_standard/template/spec/: testing.md
