[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis-standard-template"
dynamic = ["version", "readme"]
description = "Standard Trellis template for AI-assisted development across all platforms"
authors = [
    {name = "whoami", email = "whoami@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "trellis",
    "ai",
    "claude",
    "openclaw",
    "hermes",
    "cursor",
    "template",
    "coding-standard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/adminlove520/standard-trellis-template"
Repository = "https://github.com/adminlove520/standard-trellis-template"
Issues = "https://github.com/adminlove520/standard-trellis-template/issues"

[project.scripts]
trellis-init-standard = "trellis_standard.cli:main"

[tool.setuptools]
packages = ["trellis_standard"]

[tool.setuptools.package-data]
trellis_standard = ["template/*", "template/spec/*"]

[tool.setuptools.dynamic]
version = {attr = "trellis_standard.__version__"}
readme = {file = ["README.md"]}
